# cosmic-settings-daemon

./: .gitignore  Cargo.toml  Makefile  flake.nix  rustfmt.toml
audio-client/: Cargo.toml  README.md
audio-client/examples/: audio_client.rs
audio-client/src/: codec.rs  lib.rs
audio-core/: Cargo.toml  README.md
audio-core/src/: lib.rs
audio-server/: Cargo.toml  README.md
audio-server/src/: backend.rs  codec.rs  config.rs  context.rs  lib.rs  server.rs
config/: Cargo.toml
config/src/: lib.rs
config/src/shortcuts/: action.rs  binding.rs  gesture.rs  mod.rs  modifier.rs  sym.rs
config/src/window_rules/: mod.rs
cosmic-pipewire/: Cargo.toml  README.md
cosmic-pipewire/src/: device.rs  lib.rs  node.rs  profile.rs  route.rs
cosmic-settings-daemon-config/: Cargo.toml
cosmic-settings-daemon-config/src/: greeter.rs  lib.rs
data/: 30_com.system76.Cosmic.gschema.override  system_actions.ron  timezone-geodata.bitcode-v0-6  vim_symbols.ron
data/polkit-1/rules.d/: cosmic-settings-daemon.rules
debian/: changelog  control
geonames/: Cargo.toml
geonames/src/: lib.rs  main.rs
src/: battery.rs  brightness_device.rs  greeter.rs  input.rs  locale.rs  location.rs  logind_session.rs  main.rs  pipewire.rs  pulse.rs  theme.rs  time.rs  timezone.rs  wayland.rs
src/ambient_light/: backend.rs  mod.rs  sensor_proxy.rs  sysfs.rs
varlink-server/: Cargo.toml
varlink-server/src/: lib.rs
