[package]
name = "cosmic-settings-daemon"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace]
members = ["config", "cosmic-settings-daemon-config", "geonames"]

[workspace.dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic" }


[dependencies]
cosmic-settings-subscriptions = { git = "https://github.com/pop-os/cosmic-settings-subscriptions", default-features = false, features = [
    "pulse",
] }
anyhow = "1.0.99"
cosmic-settings-daemon-config = { path = "./cosmic-settings-daemon-config", features = [
    "greeter",
] }
dirs = "6.0.0"
notify = "8.2.0"
tokio = { version = "1.47.1", features = ["macros", "net", "rt"] }
udev = "0.9.3"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }
tokio-stream = "0.1.17"
sunrise = "2.1.0"
cosmic-config.workspace = true
cosmic-theme.workspace = true
cosmic-theme.export = true
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
chrono = "0.4.42"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
acpid_plug = "0.1.2"
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
locale1 = { git = "https://github.com/pop-os/dbus-settings-bindings" }
cosmic-dbus-a11y = { git = "https://github.com/pop-os/dbus-settings-bindings" }
notify-rust = "4.11.7"
walkdir = "2.5.0"
memoize = "0.5.1"
futures-util = "0.3.31"
futures = "0.3.31"
ctrlc = { version = "3.5.0", features = ["termination"] }
xkb-data = "0.2.1"
geonames = { path = "geonames" }
log = "0.4.28"
env_logger = "0.11.8"

[profile.release]
lto = "fat"

# For development and testing purposes
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
