[package]
name = "cosmic-settings-daemon"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[workspace]
members = ["audio-client", "audio-core", "audio-server", "config", "cosmic-settings-daemon-config", "geonames", "cosmic-pipewire", "varlink-server"]

[workspace.dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic" }

[workspace.dependencies.zlink]
version = "0.4.1"
default-features = false

[dependencies]
anyhow = "1.0.99"
cosmic-settings-audio-server = { path = "./audio-server" }
cosmic-settings-daemon-config = { path = "./cosmic-settings-daemon-config", features = [
    "greeter",
] }
cosmic-settings-varlink-server = { path = "./varlink-server" }
dirs = "6.0.0"
udev = "0.9.3"
log = "0.4.28"
notify = "8.2.0"
sunrise = "2.1.0"
chrono = "0.4.42"
walkdir = "2.5.0"
memoize = "0.5.1"
serde = "1.0.228"
futures = "0.3.31"
xkb-data = "0.2.1"
tracing = "0.1.44"
acpid_plug = "0.1.2"
notify-rust = "4.11.7"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
cosmic-theme.workspace = true
cosmic-config.workspace = true
geonames = { path = "geonames" }
ctrlc = { version = "3.5.0", features = ["termination"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt"] }
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
locale1 = { git = "https://github.com/pop-os/dbus-settings-bindings" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }
cosmic-dbus-a11y = { git = "https://github.com/pop-os/dbus-settings-bindings" }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }

# For development and testing purposes
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { git = "https://github.com/pop-os/libcosmic//" }
# iced_futures = { git = "https://github.com/pop-os/libcosmic//" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//" }
# cosmic-theme = { git = "https://github.com/pop-os/libcosmic//" }
