[package]
name = "cosmic-settings-daemon"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[workspace]
members = ["audio-client", "audio-core", "audio-server", "config", "cosmic-settings-daemon-config", "geonames", "cosmic-pipewire", "varlink-server"]

[workspace.dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic" }

[workspace.dependencies.zlink]
version = "0.5"
default-features = false
features = ["tokio"]

[dependencies]
acpid_plug = "0.1.2"
anyhow = "1.0.99"
chrono = "0.4.42"
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
cosmic-config.workspace = true
cosmic-dbus-a11y = { git = "https://github.com/pop-os/dbus-settings-bindings" }
cosmic-settings-audio-server = { path = "./audio-server" }
cosmic-settings-daemon-config = { path = "./cosmic-settings-daemon-config", features = [
    "greeter",
] }
cosmic-settings-varlink-server = { path = "./varlink-server" }
cosmic-theme.export = true
cosmic-theme.workspace = true
ddc-hi = "0.4.1"
dirs = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
geonames = { path = "geonames" }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
locale1 = { git = "https://github.com/pop-os/dbus-settings-bindings" }
log = "0.4.28"
memoize = "0.5.1"
notify = "8.2.0"
notify-rust = "4.11.7"
serde = "1.0.228"
sunrise = "2.1.0"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "signal"] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
udev = "0.9.3"
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
walkdir = "2.5.0"
xkb-data = "0.2.1"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }

# For development and testing purposes
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { git = "https://github.com/pop-os/libcosmic//" }
# iced_futures = { git = "https://github.com/pop-os/libcosmic//" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//" }
# cosmic-theme = { git = "https://github.com/pop-os/libcosmic//" }
