[package]
name = "cosmic-settings-audio-client"
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"
publish = true

[features]
codec = ["dep:futures-util", "dep:ron", "dep:tokio", "tokio/net", "tokio-util/codec"]

[dependencies]
cosmic-settings-audio-core = { path = "../audio-core" }
dirs = "6.0.0"
futures-util = { version = "0.3", optional = true}
tokio = { version = "1.0", default-features = false, optional = true}
tokio-util = { version = "0.7" }
serde = "1.0"
ron = { version = "0.12", optional = true }
# Needed by zlink
tracing = "0.1.44"

[dependencies.zlink]
workspace = true
default-features = false
features = ["proxy", "tokio", "tracing"]

[dev-dependencies]
cosmic-settings-audio-client = { path = ".", features = ["codec"] }
cosmic-settings-audio-core = { path = "../audio-core" }
tokio = { version = "1.49.0", features = ["full"] }
zlink = { version = "0.4.0", features = ["idl", "introspection", "tokio", "tracing", "server", "service"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
futures-util = "0.3.32"
serde = "1.0.228"
