[package]
name = "cosmic-settings-audio-core"
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"
publish = true

[dependencies]
dirs = "6.0.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies.zlink]
version = "0.4.0"
default-features = false
features = ["introspection"]
