[package]
name = "cosmic-settings-audio-server"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"
publish = true

[dependencies]
ron = "0.12.0"
intmap = "3.1.3"
tracing = "0.1.44"
numtoa = "1.0.0-alpha1"
cosmic-config.workspace = true
cosmic-settings-daemon-config = { path = "../cosmic-settings-daemon-config", features = [
    "greeter",
] }
cosmic-pipewire = { path = "../cosmic-pipewire" }
cosmic-settings-audio-core = { path = "../audio-core" }
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures-util = { version = "0.3.32", features = ["sink"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "process", "rt", "time"] }
dirs = "6.0.0"
