[package]
name = "cosmic-settings-config"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12.0"
thiserror = "2.0.12"
tracing = "0.1.41"
xkbcommon = "0.7.0"
ron = "0.9.0"
