[package]
name = "cosmic-pipewire"
version = "1.0.8"
edition = "2024"
repository = "https://github.com/pop-os/cosmic-settings-daemon"
license = "MPL-2.0"
publish = true

[dependencies]
float-cmp = "0.10.0"
intmap = "3.1.3"
libspa = "0.9.2"
libspa-sys = "0.9.2"
pipewire = "0.9.2"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tracing = "0.1.44"

[features]
