[package]
name = "cosmic-settings-daemon-config"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmic-config.workspace = true
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
cosmic-theme.workspace = true
cosmic-theme.optional = true

[features]
default = []
greeter = ["cosmic-theme"]
